<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ImageView
        android:id="@+id/iv_login_bg"
        android:layout_width="@dimen/dp_0"
        android:layout_height="@dimen/dp_0"
        android:background="@drawable/img_login_looper_bg"
        android:contentDescription="@string/app_name"
        android:scaleType="fitXY"
        android:src="@drawable/login_bg_container"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="750:3006"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_longin_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_15"
        android:layout_marginEnd="@dimen/dp_24"
        android:text="@string/str_trouble_logging_in"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_app_logo"
        android:layout_width="@dimen/dp_96"
        android:layout_height="@dimen/dp_96"
        android:layout_marginTop="@dimen/dp_100"
        android:contentDescription="@string/app_name"
        android:scaleType="fitXY"
        android:src="@drawable/ic_launcher"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_12"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_26"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_app_logo" />

    <TextView
        android:id="@+id/tv_app_meet_you"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_8"
        android:text="@string/str_meet_your_other_half"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_app_name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_20"
        android:text="@string/str_other_login_methods"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_12"
        app:layout_constraintBottom_toTopOf="@id/srl_iphone_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/g_v_50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <com.example.campuscourierpick_up.common.ShapeableLinearLayout
        android:id="@+id/srl_iphone_login"
        android:layout_width="@dimen/dp_48"
        android:layout_height="@dimen/dp_48"
        android:layout_marginEnd="@dimen/dp_18"
        android:layout_marginBottom="@dimen/dp_46"
        app:cornerRadius="@dimen/dp_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/g_v_50"
        app:solidColor="@color/white_40">

        <ImageView
            android:layout_width="@dimen/dp_26"
            android:layout_height="@dimen/dp_26"
            android:layout_marginHorizontal="@dimen/dp_11"
            android:layout_marginVertical="@dimen/dp_11"
            android:scaleType="fitXY"
            android:src="@drawable/icon_wechat_logo" />

    </com.example.campuscourierpick_up.common.ShapeableLinearLayout>

    <ImageView
        android:id="@+id/iv_iphone_last_login"
        android:layout_width="@dimen/dp_60"
        android:layout_height="@dimen/dp_34"
        android:layout_marginBottom="@dimen/dp_36"
        android:contentDescription="@string/app_name"
        android:scaleType="fitXY"
        android:src="@drawable/icon_last_time_login"
        app:layout_constraintBottom_toBottomOf="@id/srl_iphone_login"
        app:layout_constraintEnd_toEndOf="@id/srl_iphone_login"
        app:layout_constraintStart_toStartOf="@id/srl_iphone_login" />

    <com.example.campuscourierpick_up.common.ShapeableLinearLayout
        android:id="@+id/srl_qq_login"
        android:layout_width="@dimen/dp_48"
        android:layout_height="@dimen/dp_48"
        android:layout_marginStart="@dimen/dp_18"
        app:cornerRadius="@dimen/dp_24"
        app:layout_constraintStart_toStartOf="@id/g_v_50"
        app:layout_constraintTop_toTopOf="@id/srl_iphone_login"
        app:solidColor="@color/white_40">

        <ImageView
            android:layout_width="@dimen/dp_26"
            android:layout_height="@dimen/dp_26"
            android:layout_centerInParent="true"
            android:layout_marginHorizontal="@dimen/dp_11"
            android:layout_marginVertical="@dimen/dp_11"
            android:scaleType="fitXY"
            android:src="@drawable/icon_qq_logo" />

    </com.example.campuscourierpick_up.common.ShapeableLinearLayout>

    <ImageView
        android:id="@+id/iv_qq_last_login"
        android:layout_width="@dimen/dp_60"
        android:layout_height="@dimen/dp_34"
        android:layout_marginBottom="@dimen/dp_36"
        android:contentDescription="@string/app_name"
        android:scaleType="fitXY"
        android:src="@drawable/icon_last_time_login"
        app:layout_constraintBottom_toBottomOf="@id/srl_qq_login"
        app:layout_constraintEnd_toEndOf="@id/srl_qq_login"
        app:layout_constraintStart_toStartOf="@id/srl_qq_login" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_90"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/srl_iphone_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <CheckBox
            android:id="@+id/cb_agree_protocol"
            android:layout_width="@dimen/dp_16"
            android:layout_height="@dimen/dp_16"
            android:layout_gravity="center_vertical"
            android:background="@drawable/selector_agree_protocol"
            android:button="@null"
            android:checked="false" />

        <TextView
            android:id="@+id/tv_user_agreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/dp_8"
            android:text="@string/str_signing_in_means_agreeing"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_12" />

    </androidx.appcompat.widget.LinearLayoutCompat>


    <com.example.campuscourierpick_up.common.ShapeableLinearLayout
        android:id="@+id/sll_mobile_login"
        android:layout_width="@dimen/dp_0"
        android:layout_height="@dimen/dp_54"
        android:layout_marginHorizontal="@dimen/dp_27"
        android:layout_marginTop="@dimen/dp_198"
        android:gravity="center"
        android:orientation="horizontal"
        app:cornerRadius="@dimen/dp_27"
        app:gradientEndColor="@color/c_ff2087"
        app:gradientStartColor="@color/c_622bff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_app_meet_you">
        <ImageView
            android:layout_width="@dimen/dp_26"
            android:layout_height="@dimen/dp_26"
            android:layout_centerInParent="true"
            android:contentDescription="@string/app_name"
            android:scaleType="fitXY"
            android:src="@drawable/icon_phone_logo" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_4"
            android:text="@string/str_mobile_number_login"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16" />

    </com.example.campuscourierpick_up.common.ShapeableLinearLayout>
       <ImageView
           android:id="@+id/iv_mobile_last_login"
           android:layout_width="@dimen/dp_60"
           android:layout_height="@dimen/dp_34"
           android:layout_marginEnd="@dimen/dp_5"
           android:layout_marginBottom="@dimen/dp_35"
           android:contentDescription="@string/app_name"
           android:scaleType="fitXY"
           android:src="@drawable/icon_last_time_login"
           app:layout_constraintBottom_toBottomOf="@id/sll_mobile_login"
           app:layout_constraintEnd_toEndOf="@id/sll_mobile_login" />

   </androidx.constraintlayout.widget.ConstraintLayout>